--- a/public/favorites.html
+++ b/public/favorites.html
@@ -16,7 +16,46 @@
             <a href="./favorites.html">Favorites</a>
         </nav>
     </header> 
-      
+    <!-- title -->
+    <h1>Favorite Cities</h1>
+
+    <!-- input for the cities on left side -->
+    <main>
+        <aside class="fave-city-section">
+            <form class="fave-city-form">
+                <input type="text" class="fave-city-input" placeholder="ex. Dallas,TX">
+                <button class="fave-city-button">Add City</button>
+            </form>
+            <ul>
+                <li><a href="#">city, state</a></li>
+                <li><a href="#">city, state</a></li>
+                <li><a href="#">city, state</a></li>
+                <li><a href="#">city, state</a></li>
+            </ul>
+        </aside>
+
+    <!-- section for the extra info on cities -->
+        <section class="fave-city-information">
+            <h2>Name of the city</h2>
+            <p>Description: cloudy</p>
+            <br>
+            <p>Temperature: 80 deg</p>
+            <br>
+            <p>Feels like: 80 deg</p>
+            <br>
+            <p>Min Temperature: 60 deg</p>
+            <br>
+            <p>Max Temperature: 90 deg</p>
+            <br>
+            <p>Humidity: 100&</p>
+            <!-- <p>Sunrise: 8:00am</p> if I have time
+            <p>Sunset: 7:00pm</p> -->
+        </section>
+    </main>
+    <!-- footer -->
+    <footer>
+        <p class="copyright">© Wesley Lo 2022 </p>
+    </footer>
     <script src="./favorites.js"></script>
 </body>
 </html>
