fixed input issue

--- a/public/favorites.html
+++ b/public/favorites.html
@@ -23,31 +23,28 @@
     <main>
         <aside class="fave-city-section">
             <form class="fave-city-form">
-                <input type="text" class="fave-city-input" placeholder="ex. Dallas,TX">
+                <input type="text" class="fave-city-input" placeholder="ex. Dallas">
+                <input type="text" class="fave-state-input" placeholder="ex. TX">
                 <button class="fave-city-button">Add City</button>
             </form>
             <ul>
-                <li><a href="#">city, state</a></li>
-                <li><a href="#">city, state</a></li>
-                <li><a href="#">city, state</a></li>
-                <li><a href="#">city, state</a></li>
             </ul>
         </aside>
 
     <!-- section for the extra info on cities -->
         <section class="fave-city-information">
             <h2>Name of the city</h2>
-            <p>Description: cloudy</p>
+            <p id="description">Description: cloudy</p>
             <br>
-            <p>Temperature: 80 deg</p>
+            <p id="temperature">Temperature: 80 deg</p>
             <br>
-            <p>Feels like: 80 deg</p>
+            <p id="feel">Feels like: 80 deg</p>
             <br>
-            <p>Min Temperature: 60 deg</p>
+            <p id="min-temp">Min Temperature: 60 deg</p>
             <br>
-            <p>Max Temperature: 90 deg</p>
+            <p id="max-temp">Max Temperature: 90 deg</p>
             <br>
-            <p>Humidity: 100&</p>
+            <p id="humidity">Humidity: 100&</p>
             <!-- <p>Sunrise: 8:00am</p> if I have time
             <p>Sunset: 7:00pm</p> -->
         </section>
