li now clickable

--- a/public/favorites.html
+++ b/public/favorites.html
@@ -33,7 +33,7 @@
 
     <!-- section for the extra info on cities -->
         <section class="fave-city-information">
-            <h2>Name of the city</h2>
+            <h2>Example: Dallas</h2>
             <p id="description">Description: cloudy</p>
             <br>
             <p id="temperature">Temperature: 80 deg</p>
