--- a/public/favorites.html
+++ b/public/favorites.html
@@ -33,20 +33,30 @@
 
     <!-- section for the extra info on cities -->
         <section class="fave-city-information">
-            <h2>Example: Dallas</h2>
-            <p id="description">Description: cloudy</p>
-            <br>
-            <p id="temperature">Temperature: 80 deg</p>
-            <br>
-            <p id="feel">Feels like: 80 deg</p>
-            <br>
-            <p id="min-temp">Min Temperature: 60 deg</p>
-            <br>
-            <p id="max-temp">Max Temperature: 90 deg</p>
-            <br>
-            <p id="humidity">Humidity: 100&</p>
-            <!-- <p>Sunrise: 8:00am</p> if I have time
-            <p>Sunset: 7:00pm</p> -->
+            <div>
+                <h3 id="description-title">Description:</h3>
+                <p id="description">cloudy</p>
+            </div>
+            <div>
+                <h3 id="temperature-title">Temperature:</h3>
+                <p id="temperature">80&deg;</p>
+            </div>
+            <div>
+                <h3 id="feel-title">Feels like:</h3>
+                <p id="feel">80&deg;</p>
+            </div>
+            <div>
+                <h3 id="min-temp-title">Min Temperature:</h3>
+                <p id="min-temp">70&deg;</p>
+            </div>
+            <div>
+                <h3 id="max-temp-title">Max Temperature:</h3>
+                <p id="max-temp">85&deg;</p>
+            </div>
+            <div>
+                <h3 id="humidity-title">Humidity:</h3>
+                <p id="humidity">100%</p>
+            </div>
         </section>
     </main>
     <!-- footer -->
