--- a/public/favorites.html
+++ b/public/favorites.html
@@ -17,8 +17,7 @@
         </nav>
     </header> 
     <!-- title -->
-    <h1>Favorite Cities</h1>
-
+    
     <!-- input for the cities on left side -->
     <main>
         <aside class="fave-city-section">
@@ -30,30 +29,31 @@
             <ul>
             </ul>
         </aside>
-
-    <!-- section for the extra info on cities -->
+        
+        <!-- section for the extra info on cities -->
         <section class="fave-city-information">
-            <div>
+            <h1>City</h1>
+            <div class="one">
                 <h3 id="description-title">Description:</h3>
                 <p id="description">cloudy</p>
             </div>
-            <div>
+            <div class="two">
                 <h3 id="temperature-title">Temperature:</h3>
                 <p id="temperature">80&deg;</p>
             </div>
-            <div>
+            <div class="three">
                 <h3 id="feel-title">Feels like:</h3>
                 <p id="feel">80&deg;</p>
             </div>
-            <div>
+            <div class="four">
                 <h3 id="min-temp-title">Min Temperature:</h3>
                 <p id="min-temp">70&deg;</p>
             </div>
-            <div>
+            <div class="five">
                 <h3 id="max-temp-title">Max Temperature:</h3>
                 <p id="max-temp">85&deg;</p>
             </div>
-            <div>
+            <div class="six">
                 <h3 id="humidity-title">Humidity:</h3>
                 <p id="humidity">100%</p>
             </div>
