--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <!--title area-->
     <h1>The Weather and Notes App</h1>
     <form class="get-weather">
+        <label for="city-input">U.S. Only:</label>
         <input type="text" class="weather-city" placeholder="ex. Dallas,TX">
         <button class="weather-button">Get Weather!</button>
     </form>
