--- a/public/favorites.html
+++ b/public/favorites.html
@@ -23,7 +23,7 @@
         <aside class="fave-city-section">
             <form class="fave-city-form">
                 <input type="text" class="fave-city-input" name="city-input" placeholder="ex. Dallas">
-                <input type="text" class="fave-state-input" placeholder="ex. TX">
+                <input type="text" class="fave-state-input" placeholder="TX" maxlength="2">
                 <button class="fave-city-button">Add City</button>
             </form>
             <ul>
