--- a/public/favorites.html
+++ b/public/favorites.html
@@ -35,27 +35,27 @@
             <h1>City</h1>
             <div class="one">
                 <h3 id="description-title">Description:</h3>
-                <p id="description">cloudy</p>
+                <p id="description"></p>
             </div>
             <div class="two">
                 <h3 id="temperature-title">Temperature:</h3>
-                <p id="temperature">80&deg;</p>
+                <p id="temperature"></p>
             </div>
             <div class="three">
                 <h3 id="feel-title">Feels like:</h3>
-                <p id="feel">80&deg;</p>
+                <p id="feel"></p>
             </div>
             <div class="four">
                 <h3 id="min-temp-title">Min Temperature:</h3>
-                <p id="min-temp">70&deg;</p>
+                <p id="min-temp"></p>
             </div>
             <div class="five">
                 <h3 id="max-temp-title">Max Temperature:</h3>
-                <p id="max-temp">85&deg;</p>
+                <p id="max-temp"></p>
             </div>
             <div class="six">
                 <h3 id="humidity-title">Humidity:</h3>
-                <p id="humidity">100%</p>
+                <p id="humidity"></p>
             </div>
         </section>
     </main>
