added browserify and changed src for fav script

--- a/public/favorites.html
+++ b/public/favorites.html
@@ -63,6 +63,6 @@
     <footer>
         <p class="copyright">© Wesley Lo 2022 </p>
     </footer>
-    <script src="./favorites.js"></script>
+    <script src="../dist/bundle.js"></script>
 </body>
 </html>
