--- a/public/favorites.html
+++ b/public/favorites.html
@@ -22,7 +22,7 @@
     <main>
         <aside class="fave-city-section">
             <form class="fave-city-form">
-                <input type="text" class="fave-city-input" name="city-input" placeholder="ex. Dallas">
+                <input type="text" class="fave-city-input" name="city-input" placeholder="Dallas">
                 <input type="text" class="fave-state-input" placeholder="TX" maxlength="2">
                 <button class="fave-city-button">Add City</button>
             </form>
