--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     </header>   
 
     <!--title area-->
-    <h1>The Weather and Notes App</h1>
+    <h1>The Weather Web App</h1>
     <form class="get-weather">
         <label for="city-input">U.S. Only:</label>
         <input type="text" class="weather-city" placeholder="ex. Dallas,TX">
