--- a/public/index.html
+++ b/public/index.html
@@ -40,13 +40,13 @@
 
     <!--notes section-->
     <section class="notes-section">
-        <div class="notes-title">
+        <header class="notes-title">
             <h2>To Do</h2>
             <form class="enter-note">
                  <input type="text" class="new-note" placeholder="Enter note">
                 <button class="note-button">Add Note!</button>
             </form>
-        </div>
+        </header>
         <div class="notes">
             <ul>
             </ul>
